# plagiarism-detector

./: .gitignore  CHECKPOINT-week1.md  README.md  claude.md  pyproject.toml
app/: main.py  render.py
eval/: run_after_embeddings.py  run_after_judge.py  run_baseline.py
eval/fixtures/: paraphrase_seed.jsonl
eval/results/: after_embeddings.json  after_judge.json  baseline_lexical.json
scripts/: build_semantic_index.py  fetch_gutenberg.py
src/plagdetect/: judge.py
src/plagdetect/corpus/: __init__.py  loader.py
src/plagdetect/detect/: __init__.py  __main__.py  detector.py  semantic.py  shingles.py  similarity.py  spans.py  tokens.py
src/plagdetect/ingest/: __init__.py  normalize.py  router.py
src/plagdetect/ingest/parsers/: docx.py  image.py  pdf.py  zip_handler.py
tests/: test_check.py  test_corpus_loader.py  test_detector.py  test_health.py  test_ingest.py  test_normalize.py  test_spans.py  test_ui.py
tests/fixtures/prompt_injection/: fence_escape.txt  force_derived.txt  role_hijack.txt
