[project]
name = "plagdetect"
version = "0.0.1"
description = "Source-based plagiarism detection against a reference corpus."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.7",
    "openai>=1.0",
    "python-dotenv>=1.0",
    # ingestion layer
    "pypdf>=4.0",
    "python-docx>=1.0",
    "Pillow>=10.0",
    "pytesseract>=0.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plagdetect"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]